--- a/.github/workflows/Maturin.yml
+++ b/.github/workflows/Maturin.yml
@@ -26,6 +26,13 @@ jobs:
         target: [x86_64, x86, aarch64, armv7, s390x, ppc64le]
     steps:
       - uses: actions/checkout@v3
+      # install nightly rust for experiment features in kiddo
+      - name: Install latest nightly
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          override: true
+          components: rustfmt, clippy
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
@@ -49,6 +56,13 @@ jobs:
         target: [x64, x86]
     steps:
       - uses: actions/checkout@v3
+      # install nightly rust for experiment features in kiddo
+      - name: Install latest nightly
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          override: true
+          components: rustfmt, clippy
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
@@ -72,6 +86,13 @@ jobs:
         target: [x86_64, aarch64]
     steps:
       - uses: actions/checkout@v3
+      # install nightly rust for experiment features in kiddo
+      - name: Install latest nightly
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          override: true
+          components: rustfmt, clippy
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
