--- a/.github/workflows/Maturin.yml
+++ b/.github/workflows/Maturin.yml
@@ -42,6 +42,7 @@ jobs:
           target: ${{ matrix.target }}
           args: --release --out dist --find-interpreter
           sccache: 'true'
+          rust-toolchain: 'nightly'
           manylinux: auto
       - name: Upload wheels
         uses: actions/upload-artifact@v3
@@ -73,6 +74,7 @@ jobs:
           target: ${{ matrix.target }}
           args: --release --out dist --find-interpreter
           sccache: 'true'
+          rust-toolchain: 'nightly'
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
@@ -102,6 +104,7 @@ jobs:
           target: ${{ matrix.target }}
           args: --release --out dist --find-interpreter
           sccache: 'true'
+          rust-toolchain: 'nightly'
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
@@ -124,3 +127,4 @@ jobs:
         with:
           command: upload
           args: --non-interactive --skip-existing *
+          rust-toolchain: 'nightly'
